RESOLVED FIXED44038
HTML5 fragment parsing doesn't load iframes
https://bugs.webkit.org/show_bug.cgi?id=44038
Summary HTML5 fragment parsing doesn't load iframes
Adam Barth
Reported 2010-08-15 14:27:19 PDT
Created attachment 64454 [details] reduced test case This is causing some layout test failures with --html5-treebuilder turned on. I've attached a reduction.
Attachments
reduced test case (140 bytes, text/html)
2010-08-15 14:27 PDT, Adam Barth
no flags
Patch (3.76 KB, patch)
2010-08-15 22:14 PDT, Adam Barth
no flags
Patch for landing (3.76 KB, patch)
2010-08-16 00:28 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-08-15 14:37:47 PDT
The problem is that Document::adoptNode is calling setRemainsAliveOnRemovalFromTree and confusing the frame. I think we're supposed to construct the fragment completely detached but somehow it's getting attached?
Eric Seidel (no email)
Comment 2 2010-08-15 20:49:03 PDT
Fragments shouldn't get attached at all. I suspect we have a bug in HTMLConstructionSite.
Adam Barth
Comment 3 2010-08-15 22:14:27 PDT
Alexey Proskuryakov
Comment 4 2010-08-16 00:21:31 PDT
Comment on attachment 64465 [details] Patch r=me The test output doesn't really make it obvious that it's a pass. Did you intent to keep the numbered alerts in?
Adam Barth
Comment 5 2010-08-16 00:28:53 PDT
Created attachment 64473 [details] Patch for landing
WebKit Commit Bot
Comment 6 2010-08-16 01:04:42 PDT
Comment on attachment 64473 [details] Patch for landing Clearing flags on attachment: 64473 Committed r65396: <http://trac.webkit.org/changeset/65396>
WebKit Commit Bot
Comment 7 2010-08-16 01:04:47 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 8 2010-08-16 07:20:43 PDT
Comment on attachment 64473 [details] Patch for landing Thanks. I agree the test output is a bit confusing. :) But I've very glad for the bug fix!
Note You need to log in before you can comment on or make changes to this bug.