2010-08-16  Adam Barth  <abarth@webkit.org>

Reviewed by Alexey Proskuryakov.

        HTML5 fragment parsing doesn't load iframes
        https://bugs.webkit.org/show_bug.cgi?id=44038

        Test that iframes created in detached documents actually get loaded
        when they're adopted into attached documents (or, rather, when they're
        inserted into the DOM).

        * fast/frames/adopt-from-created-document-expected.txt: Added.
        * fast/frames/adopt-from-created-document.html: Added.
2010-08-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Alexey Proskuryakov.

        HTML5 fragment parsing doesn't load iframes
        https://bugs.webkit.org/show_bug.cgi?id=44038

        Previously, this code assumed that every source iframe was actually
        attached to a render tree.  It tried to "keep the iframe alive" as it
        moved documents.  However, if the iframe wasn't attached to begin with,
        it was never "alive," so trying to keep a dead iframe alive lead to a
        ...  zombie iframe.

        Test: fast/frames/adopt-from-created-document.html

        * dom/Document.cpp:
        (WebCore::Document::adoptNode):

Canonical link: https://commits.webkit.org/56196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65396 268f45cc-cd09-0410-ab3c-d52691b4dbfc